Implementar autenticação - parte 1

--- a/LTM.Structure/LTM.WebAPI/LTM.WebAPI.csproj
+++ b/LTM.Structure/LTM.WebAPI/LTM.WebAPI.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.Validation" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
