--- a/LTM.Structure/LTM.Infra.Data/LTM.Infra.Data.csproj
+++ b/LTM.Structure/LTM.Infra.Data/LTM.Infra.Data.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LTM.Domain\LTM.Domain.csproj" />
     <ProjectReference Include="..\LTM.Infra\LTM.Infra.csproj" />
   </ItemGroup>
 
