--- a/LTM.Structure/LTM.WebAPI/appsettings.json
+++ b/LTM.Structure/LTM.WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost; Initial Catalog=LTM;Persist Security Info=True;User ID=sa;Password=sa;MultipleActiveResultSets=true"
+  },
+  "Site": {
+    "UrlSite": "http://localhost:4200/",
+    "UrlApi": "http://localhost:49241/"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
