--- a/LTM.Structure/LTM.Domain/LTM.Domain.csproj
+++ b/LTM.Structure/LTM.Domain/LTM.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LTM.Infra.Data\LTM.Infra.Data.csproj" />
     <ProjectReference Include="..\LTM.Infra\LTM.Infra.csproj" />
   </ItemGroup>
 
