--- a/LTM.Structure/LTM.StartupConfig/LTM.StartupConfig.csproj
+++ b/LTM.Structure/LTM.StartupConfig/LTM.StartupConfig.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LTM.Domain\LTM.Domain.csproj" />
+    <ProjectReference Include="..\LTM.Infra.Data\LTM.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
