--- a/LTM.Structure/LTM.WebAPI/appsettings.json
+++ b/LTM.Structure/LTM.WebAPI/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost; Initial Catalog=LTM;Persist Security Info=True;User ID=sa;Password=sa;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS; Initial Catalog=LTM;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=true"
   },
   "Site": {
-    //    "UrlSite": "http://localhost:4200/",
+    "UrlSite": "http://localhost:4200/",
     "UrlApi": "http://localhost:60256"
   },
   "Logging": {
