--- a/LTM.Structure/WebUI/web-ui/package.json
+++ b/LTM.Structure/WebUI/web-ui/package.json
@@ -13,15 +13,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "^1.7.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
+    "@angular/forms": "^5.2.8",
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "moment": "^2.21.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
