--- a/LTM.Structure/LTM.Infra.Service/LTM.Infra.Service.csproj
+++ b/LTM.Structure/LTM.Infra.Service/LTM.Infra.Service.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LTM.Infra\LTM.Infra.csproj" />
+    <ProjectReference Include="..\LTM.Infra.Data\LTM.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
