--- a/LTM.Structure/LTM.WebAPI/appsettings.json
+++ b/LTM.Structure/LTM.WebAPI/appsettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS; Initial Catalog=LTM;Persist Security Info=True;User ID=sa;Password=123456;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS; Initial Catalog=LTM;Persist Security Info=True;User ID=sa;Password=Aasdf12!@;MultipleActiveResultSets=true"
   },
   "Site": {
     "UrlSite": "http://localhost:4200/",
-    "UrlApi": "http://localhost:60256"
+    "UrlApi": "http://localhost:50934"
   },
   "Logging": {
     "IncludeScopes": false,
